# rivals

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/maps/: e1m1.tmx  maptiles.tsx
build-scripts/: clang-format-src.sh
bundle/resources/: rivals.rc.in
game/: CMakeLists.txt
game/assets/maps/: e1m1.json  maptiles..json
game/bundle/icons/: rivals.icns
game/bundle/resources/: rivals.rc.in
game/src/: animatedsprite.cpp  animatedsprite.hpp  dungeoncrawler.cpp  dungeoncrawler.hpp  enemy.cpp  enemy.hpp  engine.cpp  engine.hpp  file.cpp  file.hpp  gason.cpp  gason.hpp  globals.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  level.cpp  level.hpp  main.cpp  map.cpp  map.hpp  mapcursor.cpp  mapcursor.hpp  player.cpp  player.hpp  sprite.cpp  sprite.hpp
game/src/include/: animatedsprite.h  enemy.h  globals.h  graphics.h  map.h
game/src/platform/linux/: linuxfile.cpp  linuxfile.hpp
game/src/platform/osx/: osxfile.cpp  osxfile.hpp
game/src/platform/windows/: winfile.cpp  winfile.hpp
src/: animatedsprite.cpp  dungeoncrawler.cpp  enemy.cpp  engine.cpp  level.cpp  map.cpp  player.cpp  sprite.cpp
src/include/: animatedsprite.h  dungeoncrawler.h  enemy.h  engine.h  globals.h  level.h  map.h  mapcursor.h  player.h  sprite.h
